<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eff2f6">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:gravity="center_vertical"
        android:background="@color/top_bar_normal_bg">

        <include layout="@layout/ease_commom_back_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="@string/push_nick"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_input_nickname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:background="@drawable/em_nickename_input_bg"
            android:hint="@string/input_new_nick_hint"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/em_button_login_bg"
            android:textColor="#fff"
            android:text="@string/save_new_nickname"/>

        <TextView
            android:id="@+id/tv_nickname_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="#cccccc"
            android:text="@string/nickname_description" 
/>
    </LinearLayout>

</LinearLayout>
