<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg">
    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarLeftImage="@drawable/em_mm_title_back"
        app:titleBarTitle="@string/push_settings"
        >
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/ease_common_tab_bg"
            android:textSize="16sp"
            android:textColor="#fff"
            android:text="@string/save"
            />
    </com.hyphenate.easeui.widget.EaseTitleBar>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/btn_gray_normal"
        />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:gravity="bottom|left"
            android:textColor="@color/btn_gray_pressed"
            android:text="@string/push_no_disturb"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/btn_gray_normal"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@drawable/em_btn_bottom_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:typeface="serif"
            android:textColor="@android:color/black"
            android:text="@string/push_no_disturb_on"/>

        <CheckBox
            android:id="@+id/cb_no_disturb_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E6E6E6"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@drawable/em_btn_bottom_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:typeface="serif"
            android:textColor="@android:color/black"
            android:text="@string/push_only_on"/>

        <CheckBox
            android:id="@+id/cb_no_disturb_only_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E6E6E6"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@drawable/em_btn_bottom_selector">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:typeface="serif"
            android:textColor="@android:color/black"
            android:text="@string/push_no_disturb_off"/>

        <CheckBox
            android:id="@+id/cb_no_disturb_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E6E6E6"/>
</LinearLayout>
