<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:gravity="center_vertical"
        android:background="@color/top_bar_normal_bg">

        <include layout="@layout/ease_commom_back_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="@string/diagnose"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/gray_normal"
            android:text="@string/Current_version"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/gray_normal"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_uploadlog"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:background="@color/top_bar_normal_bg"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/button_uploadlog"/>

</LinearLayout>
