<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/em_btn_style_alert_dialog_background"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:text="@string/logout_hint"/>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="8dp"
            android:padding="6dp"
            android:gravity="center"
            android:background="@drawable/em_btn_style_alert_dialog_special"
            android:onClick="logout"
            android:textSize="19sp"
            android:textColor="@android:color/white"
            android:text="@string/logout"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="4dp"
            android:padding="6dp"
            android:gravity="center"
            android:background="@drawable/em_btn_gray_selector"
            android:onClick="cancel"
            android:textSize="19sp"
            android:textColor="@android:color/white"
            android:text="@string/cancel"/>
    </LinearLayout>

</RelativeLayout>
