<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee">
    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:padding="5dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/em_groups_icon"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/avatar"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:textSize="16sp"
            android:textColor="#0F0F0F"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:background="@drawable/em_button_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/em_button_myprofile_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:textSize="16sp"
                android:textColor="#8F8F8F"
                android:text="@string/Group_of_Lord"/>

            <TextView
                android:id="@+id/tv_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColor="#080808"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/em_button_myprofile_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:textSize="16sp"
                android:textColor="#8F8F8F"
                android:text="@string/Introduction"/>

            <TextView
                 android:id="@+id/tv_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColor="#080808"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_to_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:padding="7dp"
        android:background="@drawable/em_btn_green_selector"
        android:onClick="addToGroup"
        android:enabled="false"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:text="@string/To_join_the_chat"/>

</LinearLayout>
