<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/root_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#252C39"
    >

    <ImageView
        android:id="@+id/iv_adaptive_down_api18"
        android:layout_width="match_parent"
        android:layout_height="44px"
        android:background="#252C39"/>

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_call_state"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textSize="22sp"
            android:textColor="@color/voip_interface_text_color"/>

        <com.yusong.club.ui.im.widget.MyChronometer
            android:id="@+id/chronometer"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="Chronometer"/>

        <TextView
            android:id="@+id/tv_is_p2p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            />

        <TextView
            android:id="@+id/tv_calling_duration"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textSize="15sp"
            android:textColor="@color/voip_interface_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/swing_card"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/em_default_avatar"/>

        <TextView
            android:id="@+id/tv_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            tools:ignore="HardcodedText"
            android:textColor="@android:color/white"
            android:text="张三"/>

        <TextView
            android:id="@+id/tv_network_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_voice_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_mute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/em_icon_mute_normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:textColor="#666167"
                    android:text="@string/mute"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_handsfree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/em_icon_speaker_normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:textColor="#666167"
                    android:text="@string/Hands_free"/>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:paddingLeft="30px"
            android:paddingRight="30px">

            <Button
                android:id="@+id/btn_hangup_call"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:background="@drawable/em_call_hangup_bg"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:text="@string/hang_up"/>

            <LinearLayout
                android:id="@+id/ll_coming_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/btn_refuse_call"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/em_call_hangup_bg"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/hang_up"/>

                <Button
                    android:id="@+id/btn_answer_call"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="30px"
                    android:gravity="center"
                    android:background="@drawable/em_call_answer_bg"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:text="@string/answer"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
